--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
