--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.5.2",
-    "vue-router": "^3.4.3"
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
